<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/spacing_xxl"
    android:paddingTop="@dimen/spacing_xxl"
    android:paddingBottom="@dimen/spacing_lg">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/av_history"
        android:textAppearance="@style/TextAppearance.FileCleaner.Title"
        android:textColor="@color/textPrimary"
        android:accessibilityHeading="true" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_lg"
        android:clipToPadding="false"
        android:layoutAnimation="@anim/layout_item_stagger"
        android:nestedScrollingEnabled="false"
        android:importantForAccessibility="yes"
        android:contentDescription="@string/a11y_scan_results_summary" />

    <TextView
        android:id="@+id/tv_no_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/av_no_history"
        android:textAppearance="@style/TextAppearance.FileCleaner.Body"
        android:textColor="@color/textTertiary"
        android:gravity="center"
        android:paddingVertical="@dimen/spacing_xxl"
        android:visibility="gone" />
</LinearLayout>
